# sandbox

./: .gitignore  AlgebraicEquation.hs  CubicEquation.hs  LinearContinuationMonad.hs  LinearHaskellFold.hs  LinearLogic.hs  SubstructuralTypes.hs  list-zip-entries.hs  python_capture_output.py  smooth_functions.ipynb  test_RequiredTypeArguments.hs
agda/: TestFromNat.agda  TestNumberElaboration.agda
agda/LeanBook_agda/: Basic.agda
agda/LeanBook_agda/LeanBook/Int/: Setoid.agda
claude-code/sudoku/: CLAUDE.md  sudoku.html
claude-code/sudoku-emscripten/: CLAUDE.md  main.js  minisat.js  sudoku.html
claude-code/sudoku-z3/: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.js
claude-code/sudoku-z3/src/: main.js  solver.js
elo-rating/: EloRating.hs
gurobi/: test_gurobi_constr_same_name.py
haskell_signal_handler/: test1.hs  test2.hs
hello_dll/: Makefile  hello.c  test_ctypes_dll.py
hello_openjij/: best_feasible_unrelaxed_error.ipynb  hello.ipynb  pyproject.toml
latin-hypercube-sampling/: LatinHypercube.hs
lean/LeanBook/: LeanBook.lean  README.md  lake-manifest.json  lakefile.lean
lean/LeanBook/NatCommMonoid/: TypeClass.lean
openjij_fma/: blackbox_function.lp  blackbox_optimization-ramsey.ipynb  blackbox_optimization.ipynb  pyproject.toml  ramsey_wt-ram_k3_n11.ra1.lp  ramsey_wt-ram_k3_n11.ra1.wcnf
scip-docker/: Dockerfile  README.md
shell/test-background-job/: long-running-command.sh  test-nohup-disown.sh  test-nohup.sh  test.sh
skills/pdf-to-markdown/: SKILL.md  reference.md
sqlalchemy/: test_computed.py
(+50 files in other folders)
