[project]
name = "hello-openjij"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jijzept-sdk[all]>=2025.4.8",
    "openjij>=0.9.2",
]

[dependency-groups]
dev = [
    "ipython>=9.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
]
